docker profile added - docker compose upgraded