@@ -18,6 +18,7 @@ import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @RequiredArgsConstructor
@@ -53,8 +54,9 @@ public class BeansConfigs {
         final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         final CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true);
-        config.setAllowedOrigins(Collections.singletonList(
-                "http://localhost:4200"
+        config.setAllowedOrigins(List.of(
+                "http://localhost:4200",
+                "http://localhost:6655"
         ));
 
         config.setAllowedHeaders(Arrays.asList(
